--- a/style.css
+++ b/style.css
@@ -52,11 +52,45 @@ picture {
 /* **** ----- Reset: END ----- **** */
 
 /* ----- Main Styles ----- */
+body  {
+    background-color:var(--dark-cyan);
+}
+.background {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-image:
+    url('images/bg-pattern-top.svg'),
+    url('images/bg-pattern-bottom.svg');
+    background-position:
+    top -38rem left -48rem,
+    bottom -38rem right -48rem;
+    background-repeat: no-repeat;
+} 
+
+
 .card {
     display: flex;
     flex-direction: column;
-    align-items: center
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    background-image: url('images/bg-pattern-card.svg');
+    background-position: 0px -9px;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 325px;
+    padding: 25px;
+    margin: 0 20px;
+    border-radius: 14px;
 
+}
+.profile-pic {
+    border: solid 6px white;
+    border-radius: 50%;
+    width: 6.5rem;
 }
 .stats {
     display: flex;
@@ -64,7 +98,11 @@ picture {
 }
 
 /* ----- Footer Styles ----- */
-.attribution { font-size: 11px; text-align: center; }
+footer {
+    position: absolute;
+    bottom: 16px;
+}
+.attribution { font-size: 11px; text-align: center; padding-top: 35px }
 .attribution a { color: hsl(228, 45%, 44%); }
 
 /* ----- Media Queries ----- */
